# jibril-old

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: discord.yml  quality.yml
jibril/: main.py
jibril/modules/chess/: commands.py
jibril/modules/meta/: __init__.py  commands.py
jibril/utils/: constants.json  defaults.py  flags.py  markdown.py
jibril/utils/controllers/: lichess.py
jibril/utils/models/: lichess.py
jibril/utils/views/: lichess.py
shiro/: main.py
shiro/chess/: __init__.py  lichess.py
shiro/modules/chess/: lichess.py
shiro/utils/: alias.yml  constants.json  defaults.py  emoji.yml  flags.py  lichess.py  markdown.py  upload.py
shiro/utils/models/: lichess.py
shiro/utils/views/: lichess.py
